# monkeyDcode

./: .gitignore  .mcp.json  .opencode.json  GAPS.md  INSTALLATION.md  LAUNCH.md  LICENSE  README.md  biome.json  bunfig.toml  package.json
.claude/: settings.json
.monkeydcode/: capability-cache.json  working-memory.json
IMPLEMENTED/: 04-echo-milestone.md
benchmarks/: README.md  compare.ts  run.ts
benchmarks/results/: 2026-06-11T19-01-51-851Z-with-consistency.json  report.md
benchmarks/tasks/01-add-pagination/: task.md
benchmarks/tasks/02-fix-off-by-one/: task.md
benchmarks/tasks/03-add-error-handling/: task.md
benchmarks/tasks/04-debounce-utility/: task.md
benchmarks/tasks/05-input-validation/: task.md
docs/: IMPLEMENTATION-STATUS.md
plan/: 05-verification-pipeline.md  06-consistency-engine.md  07-plan-build-agents.md  08-python-bridge.md  11-tui-and-installation.md  KNOWN-PROBLEMS.md  README.md  TOOLS.md  agents.md  architecture.md  consistency-engine.md  python-bridge.md  verification.md
plan/completed/: 00-prerequisites.md  01-fork-and-scaffold.md  02-adopt-llm-package.md  03-adopt-engine-core.md  09-context-engineering.md  10-review-subagents.md  12-benchmarking.md
scripts/: config.default.toml  install.ps1  install.sh  setup-python.sh
steps/: next.md
tools/: pyproject.toml
tools/src/: bridge_server.py  tree_sitter_index.py
tools/src/auth/: __init__.py
tools/src/connections/: __init__.py
tools/src/knowledge_graph/: __init__.py
tools/src/vector_store/: __init__.py
tools/tests/: test_bridge.py  test_tree_sitter.py
(+45 files in other folders)
