[project]
name = "tools"
version = "0.1.0"
description = "This is the package that contains all the tools and tooling for the agent monkeycode ;)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "croniter>=6.2.2",
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "openai>=2.37.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "tenacity>=9.1.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
